Fix display of verify-email emblem on Firefox.

--- a/client/site/site.less
+++ b/client/site/site.less
@@ -903,7 +903,7 @@ body.form-page {
       width: 300px;
       height: 300px;
       background: fade(@brand-color, 25%) data-uri('../res/email.svg') no-repeat center center;
-      background-size: 215px 215px;
+      background-size: 215px;
       border-radius: 100%;
       font-size: 0;
       margin: 0 auto;
@@ -919,7 +919,7 @@ body.form-page {
       h1 {
         width: 200px;
         height: 200px;
-        background-size: 143px 143px;
+        background-size: 143px;
       }
     }
   }
